# colter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yaml
src/colter/: __init__.py  cli.py  email.py  scraper.py  secrets.py
