[project]
name = "colter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Cook", email = "joshuacook0023@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["typer", "rich"]

[project.scripts]
colter = "colter:cli.app"

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
