[project]
name = "colter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Cook", email = "joshuacook0023@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "typer>=0.15.1",
    "rich>=13.9.4",
    "yagmail>=0.15.293",
]

[project.scripts]
colter = "colter:cli.app"

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "mypy", "types-requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
